--- a/styles.css
+++ b/styles.css
@@ -12,6 +12,7 @@ body{
 	font-family: 'Chakra Petch', sans-serif;
 }
 
+/* Navbar Bootstrap Override CSS */
 .navbar-default{
 	font-family: 'Chakra Petch', sans-serif;
 	background-color: #FFFCF9;
@@ -29,7 +30,6 @@ body{
 	color: #5BC0BE;
 }
 
-
 .navbar-default .navbar-nav > li > a {
 	color: #5BC0BE;
 }
@@ -44,7 +44,7 @@ body{
 	outline: none;
 }
 
-/*Header CSS Start */
+/*Header CSS */
 
 header{
 	background-color: #5BC0BE ;
@@ -101,6 +101,8 @@ header h2{
     animation-delay:2s;
 }
 
+/* Key Frames */
+
 @keyframes slideup{
     from {
         top: 0px;
@@ -144,6 +146,7 @@ header h2{
 
 }
 
+/* CSS Lines */
 .line{
     margin-bottom:10px;
     height:30px;
@@ -217,7 +220,7 @@ header h2{
 }
 /* Code Animation CSS end */
 
-/* Header CSS end */
+/*Home Page CSS */
 
 .whyOtter{
 	background-color: #FFFCF9 ;
@@ -241,6 +244,8 @@ header h2{
 	color: #343E3D ;
 }
 
+/* Content Css */
+
 .content {
 	background-color: #5BC0BE;
 	color: #343E3D;
@@ -253,7 +258,7 @@ header h2{
 	font-size:3em;
 }
 
-/*Footer Shit*/
+/*Footer CSS*/
 
 footer{
 	background-color:#343E3D;
@@ -272,6 +277,7 @@ footer h3{
 
 .socialLinks i{
 	padding-left:10px;
+	color: #FFFCF9;
 	transition: transform .2s;
 }
 
@@ -288,6 +294,7 @@ footer h3{
 	text-align:center;
 	padding-bottom: 25vh;
 	padding-top: 5vh;
+	min-height:100vh;
 	
 }
 
@@ -301,6 +308,7 @@ footer h3{
 	padding-top:10px;
 	text-align:left;
 }
+
 /*Lessons Page */
 
 .lessons{
@@ -308,6 +316,7 @@ footer h3{
 	padding:40px;
 	text-align:center;
 	color: #343E3D;
+	height:100%;
 }
 
 .lessonBox{
@@ -322,6 +331,8 @@ footer h3{
 .lessonBox:hover{
 	transform: scale(1.1);
 }
+
+/*Individual Lesso Pages Css*/
 
 .lessons i{
 	font-size:3em;
@@ -345,8 +356,22 @@ footer h3{
 
 .lessonVid{
 	text-align:center;
+	position: relative;
+    overflow: hidden;
 }
 
+.lessonFrame{
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100px;
+	border: 0;
+}
+
+.lessonSection{
+	min-height: 100vh;
+}
 
 .next{
 	float:right;
@@ -386,15 +411,35 @@ footer h3{
 }
 
 
-/*Phone Shit */
+
+
+/*Mobile Media Queries*/
 
 @media only screen and (max-width: 800px) {
 	
 	.navbar-default .navbar-nav > li > a {
 		text-align: center; 
 	}
+
+	.animationWrapper { 
+		display: none;
+	}
+
+	.otterpic{
+		height:400px;
+		padding-left:30px;
+		padding-top:80px;
+	}
+
+	canvas{
+		display:none;
+	}
+
+	.lessonIMG{
+		width:80%	}
 }
 
+/*Stops Lesson Boxes zooming When they each take up a whole line */
 @media only screen and (max-width: 1250px) {
 
 	.lessonBox:hover{
@@ -402,9 +447,9 @@ footer h3{
 	}
 }
 
+/* ALl Icons USed A Styled Provided By Font Aweome @ fontawesome.com
 
-
-
+/*Colours    */
 /*
 snow - #FFFCF9
 aqaumarine - #6FFFE9
